WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278005
[Unified PDF] Discrete mode: super jittery scrolling, document intermittently disappears altogether briefly
https://bugs.webkit.org/show_bug.cgi?id=278005
Summary
[Unified PDF] Discrete mode: super jittery scrolling, document intermittently...
Tim Horton
Reported
2024-08-12 20:37:17 PDT
[Unified PDF] Discrete mode: super jittery scrolling, document intermittently disappears altogether briefly
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-08-12 20:37:18 PDT
<
rdar://problem/131934095
>
Tim Horton
Comment 2
2024-08-12 20:40:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32097
EWS
Comment 3
2024-08-12 21:34:38 PDT
Committed
282156@main
(1d216164208b): <
https://commits.webkit.org/282156@main
> Reviewed commits have been landed. Closing PR #32097 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug