[Unified PDF] Discrete mode: super jittery scrolling, document intermittently disappears altogether briefly https://bugs.webkit.org/show_bug.cgi?id=278005 rdar://131934095

Reviewed by Abrar Rahman Protyasha.

In discrete mode, we use very specific and non-traditional scrolling physics for
swapping pages. This doesn't jive with rubber-banding, since when we hit the
transition between pages we stop abruptly, and peel the page away from the edge
in a layered manner when you push further.

Also, rubber-banding causes scroll offset chaos for some undiagnosed reason.

Given both reasons, disable rubber-banding in discrete mode.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::overscrollBehavior const):

Canonical link: https://commits.webkit.org/282156@main